plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.18'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.gitbaby'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

configurations.all {
	exclude group: 'com.vaadin.external.google', module: 'android-json'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
	implementation 'com.google.code.gson:gson:2.10.1'
	implementation 'at.favre.lib:bcrypt:0.10.2'
	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
	implementation 'javax.servlet:jstl:1.2'
	implementation 'net.coobird:thumbnailator:0.4.20'
	implementation 'redis.clients:jedis:5.2.0'

	compileOnly 'software.amazon.awssdk:aws-sdk-java:2.31.77'
	implementation 'software.amazon.awssdk:auth:2.31.77'
	implementation 'software.amazon.awssdk:s3:2.31.77'
	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'

	implementation 'redis.clients:jedis:5.2.0'
	implementation 'com.sun.mail:jakarta.mail:2.0.1'
	implementation 'com.sun.activation:jakarta.activation:2.0.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
